# datalake-metadata

./: .coveragerc  .gitignore  .mega-linter.yml  Pipfile  README.md  data.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
datalake_metadata/: __init__.py
datalake_metadata/schemas/: metadata-v0.0.1.schema.json  metadata-v0.0.2.schema.json  metadata-v1.0.0.schema.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_04361de723e11c48___init___py.html  z_04361de723e11c48_version_py.html  z_a44f0ac069e85531_test_core_utils_py.html
tests/: test_core_utils.py  test_v0_0_1.py
